--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,12 +1,9 @@
-<header>
-  <app-menu-bar></app-menu-bar>
-</header>
-
 <app-menu-title></app-menu-title>
 
 <div class="container__articles">
   <div class="articles__main">
     <app-big-card
+      Id="1"
       photoCover="https://jaydevs.com/wp-content/uploads/2022/09/Frame-567.png"
       cardTitle="The new version of angular is out"
       cardDescription="Angular is a development platform, built on TypeScript. "
@@ -16,20 +13,64 @@
 
   <div class="articles__others">
     <app-small-card
+      Id="2"
       photoCover="https://blog.trainning.com.br/wp-content/uploads/2018/06/Why-AngularJS-A1.jpg"
       cardTitle="Introduction to forms in Angular"
     ></app-small-card>
 
     <app-small-card
+      Id="3"
       photoCover="https://www.mobileappdaily.com/public/uploads/mad_588212b2ce.png "
       cardTitle="Introduction to the Angular docs"
     >
     </app-small-card>
 
     <app-small-card
+      Id="4"
       photoCover="https://angularcommunity.net/assets/images/ACM_logo_main%20copy.png"
       cardTitle="News and Tips from the Angular Team"
     >
     </app-small-card>
   </div>
 </div>
+
+<div class="container__articles">
+  <div class="articles__main">
+    <app-big-card
+      Id="1"
+      photoCover="https://thebenforce.com/_astro/typescript_scripts@920w.ce63014a.webp"
+      cardTitle="Running TypeScript without Compiling"
+      cardDescription="AIf you’re like me you create scripts to automate things all the time. While you can do quite a bit with bash, it’s just a lot easier to use your primary language—in this case TypeScript. With just a few tricks you can start writing your scripts in TypeScript. "
+    >
+    </app-big-card>
+  </div>
+
+  <div class="articles__others">
+    <app-small-card
+      Id="2"
+      photoCover="https://img-c.udemycdn.com/course/750x422/4393550_7bcb.jpg"
+      cardTitle="Patrones de Diseño en JavaScript y TypeScript"
+    ></app-small-card>
+
+    <app-small-card
+      Id="3"
+      photoCover="https://slideplayer.com/17004951/98/images/slide_1.jpg"
+      cardTitle="History of JavaScript"
+    >
+    </app-small-card>
+
+    <app-small-card
+      Id="4"
+      photoCover="https://img-c.udemycdn.com/course/750x422/1138310_e145_2.jpg"
+      cardTitle="Web Development with JavaScript, TypeScript and Angular"
+    >
+    </app-small-card>
+  </div>
+</div>
+
+<footer class="footer__copyright">
+  <!-- Copyright Section -->
+  <div class="copyright">
+    <p>© Copyright 2001-2022 Copyright.com.br - All Rights Reserved - Legal</p>
+  </div>
+</footer>
