--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -6,14 +6,15 @@
   </div>
 
   <div class="big-card__title">
-    <a href="https://angular.io/guide/setup-local" target="_blank">
-      <h1>{{ cardTitle }}</h1>
-    </a>
+      <h1><a [routerLink]="['content', Id]">{{ cardTitle }}</a></h1>
+
   </div>
 
   <div class="big-card__description">
     <p>
+      <a [routerLink]="['content', Id]">
       {{ cardDescription }}
+    </a>
     </p>
   </div>
 </div>
