--- a/src/app/components/menu-bar/menu-bar.component.css
+++ b/src/app/components/menu-bar/menu-bar.component.css
@@ -1,11 +1,22 @@
+.container__menur-bar {
+  box-shadow: 0px 2px 24px 4px rgba(26, 22, 22, 0.75);
+  -webkit-box-shadow: 0px 2px 24px 4px rgba(31, 26, 26, 0.75);
+  -moz-box-shadow: 0px 2px 24px 4px rgba(25, 21, 21, 0.75);
+}
 
 .container__menur-bar > ul {
   display: flex;
   flex-direction: row;
 }
 
-.container__menur-bar > ul > li{
-margin-right: 20px;
-list-style: none;
+.container__menur-bar > ul > li {
+  margin-right: 30px;
+  list-style: none;
 }
 
+.container__menur-bar > ul > li:hover {
+  -xpedu-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
+  transition: all 0.5s;
+}
