--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -2,7 +2,7 @@
 
   <div class="container__small-card-content">
     <div class="small-card__photo">
-      <a href="https://angular.io/guide/what-is-angular" target="_blank">
+      <a [routerLink]="['content', Id]">
         <img
           src="{{ photoCover }}"
           alt=""
@@ -11,13 +11,12 @@
     </div>
 
     <div class="small-card__title">
-      <a href="https://angular.io/guide/setup-local" target="_blank">
-        <h1>{{ cardTitle }}</h1>
-      </a>
+       <h1><a [routerLink]="['content', Id]">{{ cardTitle }}</a></h1>
     </div>
   </div>
 
   <div class="container__small-card__separator">
     <hr />
   </div>
-</div>
+
+
