--- a/src/styles.css
+++ b/src/styles.css
@@ -3,17 +3,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: #111111;
+  background-color: #201f1f;
   color: #FFFFFF;
   font-family: 'segoe UI';
 }
 
 a {
   text-decoration: none;
-}
-
-header {
-  margin-top: 15px;
-  display: flex;
-  justify-content: center;
 }
